--- a/HTC智能手机/index.html
+++ b/HTC智能手机/index.html
@@ -118,7 +118,16 @@
               <div id="marquee">
                    <div id="marqueeMain">
                       <div id="marquee1"></div>
-                      <div id="marquee2"></div>
+                      <div id="marquee2">
+                          <div id="marquee2main">
+                            <div id="marquee2content">
+                               <h5 id="marquee2contenth5"></h5>
+                               <a id="marquee2contenta" href="#">
+                                  <img  src="css/images/22.png"/>
+                               </a>
+                            </div>
+                          </div>
+                      </div>
                       <div id="marquee3"></div>
                       <div id="marquee4"></div>
                       <div id="marquee5"></div>
@@ -126,33 +135,43 @@
               </div>
               <div id="marqueetabs">
                  <ul id="tabs">
-                    <li id="tabsli1">
-                        <a class="tabsa" href="#">
-                             <div class="timer"></div>
-                             <div class="title">去发现  去改变</div>
+                    <li class="tabsli" id="tabsli1">
+                        <a class="tabsa" >
+                             <div class="timer">
+                                <div id="timer1"></div>
+                             </div>
+                             <div class="title" >去发现  去改变</div>
                         </a>
                     </li>
-                    <li id="tabsli2">
-                        <a class="tabsa" href="#">
-                             <div class="timer"></div>
+                    <li class="tabsli" id="tabsli2">
+                        <a class="tabsa" >
+                             <div class="timer">
+                                <div id="timer2"></div>
+                             </div>
                              <div class="title">New HTC One（单卡版）</div>
                         </a>
                     </li>
-                    <li id="tabsli3">
-                        <a class="tabsa" href="#">
-                             <div class="timer"></div>
+                    <li class="tabsli" id="tabsli3">
+                        <a class="tabsa" >
+                             <div class="timer">
+                                <div id="timer3"></div>
+                             </div>
                              <div class="title">HTC One mini</div>
                         </a>
                     </li>
-                    <li id="tabsli4">
-                        <a class="tabsa" href="#">
-                             <div class="timer"></div>
+                    <li class="tabsli" id="tabsli4">
+                        <a class="tabsa" >
+                             <div class="timer">
+                                <div id="timer4"></div>
+                             </div>
                              <div class="title">New HTC One</div>
                         </a>
                     </li>
-                    <li id="tabsli5">
-                        <a class="tabsa" href="#">
-                             <div class="timer"></div>
+                    <li class="tabsli" id="tabsli5">
+                        <a class="tabsa" >
+                             <div class="timer">
+                                <div id="timer5"></div>
+                             </div>
                              <div class="title">HTC Desire 608t / 606w</div>
                         </a>
                     </li>
