--- a/世纪佳缘/index.html
+++ b/世纪佳缘/index.html
@@ -436,11 +436,22 @@
                      </li>
                      <li class="clearfix">
                            <div class="popregtext">生   日：</div>
-                           <div class="f2"></div>
+                           <div class="f2">
+                               <span class="f2s"></span>
+                               <span class="f2content">年</span>
+                               <span class="f2s"></span>
+                               <span class="f2content">月</span>
+                               <span class="f2s"></span>
+                               <span class="f2content">日</span>
+                           </div>
                      </li>
                      <li class="clearfix">
                            <div class="popregtext">我   在：</div>
-                           <div class="f3"></div>
+                           <div class="f3">
+                               <span class="f2s"></span>
+                               <span id="f3content"></span>
+                               <span class="f2s"></span>
+                           </div>
                      </li>
                      <li class="clearfix">
                          <div class="popregtext">婚姻状况：</div>
