--- a/微信，是一种生活方式/index.html
+++ b/微信，是一种生活方式/index.html
@@ -72,9 +72,58 @@
                            </li>
                        </ul>
                        <div id="intro">
+                         <div id="introMain">
+                          <ul id="introMainul">
+                             <li>
+                                <a class="dota" id="dot1" ></a>
+                             </li>
+                             <li>
+                                <a class="dota" id="dot2" ></a>
+                             </li>
+                             <li>
+                                <a class="dota" id="dot3" ></a>
+                             </li>
+                          </ul>
+                          <a id="pre" ></a>
+                          <a id="next" ></a>
                           <div id="intropic">
-                             <div id="intropicMain"></div>
+                             <div id="intropicMain">
+                                 <div class="intropicMainpic">
+                                    <div id="intropicMainpic1"></div>
+                                    <p class="intropicMainpicc">
+                                        <span>现在，加入实时对讲体验<br>Windows Phone8 4.5</br>
+                                              <span class="gray">
+                                                 <a class="intropicMainpicca" href="#">了解详情</a>
+                                              </span>
+                                        </span>
+                                    </p>
+                                 </div>
+                                 <div class="intropicMainpic">
+                                    <div id="intropicMainpic2"></div>
+                                    <p class="intropicMainpicc">
+                                        <span>诺基亚S40 1.5正式版发布<br>附近的人，认识身边的朋友</br>
+                                              <span class="gray">
+                                                 <a class="intropicMainpicca" href="#">了解详情</a>
+                                              </span>
+                                        </span>
+                                    </p>
+                                 </div>
+                                 <div class="intropicMainpic">
+                                    <div id="intropicMainpic3"></div>
+                                    <p class="intropicMainpicc">
+                                        <span>你也许希望，和微信的世界同步</br>
+                                              <span class="gray">
+                                                 <a class="intropicMainpicca" href="#">Android 5.0</a>
+                                              </span>
+                                              <span class="gray">
+                                                 <a class="intropicMainpicca" href="#">iPhone 5.0</a>
+                                              </span>
+                                        </span>
+                                    </p>
+                                 </div>
+                             </div>
                           </div>
+                         </div>
                           <h1 id="h1title">
                              <span id="h1titles">微信，是一个生活方式</span>
                           </h1>
