--- a/迅雷会员 因快而乐/index.html
+++ b/迅雷会员 因快而乐/index.html
@@ -11,6 +11,7 @@
        <script type="text/javascript"  src="js/jQuerydemo.js"></script>
    </head>
    <body >
+       <a id="comeback"></a>
        <div id="header">
           <div id="headertop">
              <a id="headertopa" href="#"></a>
@@ -19,9 +20,7 @@
                     <span class="fgf">|</span>
                     <a class="headspa" href="#">注册</a>
                     <span class="fgf">|</span>
-                    <a id="linkhelps" href="#">帮助
-                      <span id="linkhelpspic"></span>
-                    </a>
+                    <a id="linkhelps" href="#">帮助</a>
                     <a id="navlinks" href="#">开通会员</a>
              </div>
              <div id="helpcon"></div>
@@ -177,11 +176,11 @@
                 </div>
             <!--  </div> -->
              <ul id="wpbanul">
-                 <li id="wpbanli1"></li>
-                 <li id="wpbanli2"></li>
-                 <li id="wpbanli3"></li>
-                 <li id="wpbanli4"></li>
-                 <li id="wpbanli5"></li>
+                 <li class="wpbanli" id="wpbanli1"></li>
+                 <li class="wpbanli" id="wpbanli2"></li>
+                 <li class="wpbanli" id="wpbanli3"></li>
+                 <li class="wpbanli" id="wpbanli4"></li>
+                 <li class="wpbanli" id="wpbanli5"></li>
              </ul>
           </div>
           <div id="contentbottom">
