--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
        <meta http-equiv="Content-type" content="text/html;charset=utf-8">
        <link rel="stylesheet" type="text/css" href="css/index.css"></link>
        <style type="text/css">
-#list{width: 1000px;height: 300px;margin: 0 auto 0;}
+#list{width: 1200px;height: 400px;margin: 0 auto 0;}
 .indexA{display: block; width: 255px;height: 255px;line-height: 255px;text-align: center;text-decoration: none;font-size: 14px;font-family: 宋体; border: 1px solid #666;box-shadow:0 0 3px rgba(0 0 0 0.4);float: left;margin: 0 20px 0 0; }
 .indexA:hover{background-color: #666;color: #f00;}
        </style>
@@ -15,6 +15,10 @@
          <a class="indexA" href="网易免费邮/index.html">网易免费邮</a>
          <a class="indexA" href="baidu/index.html">百度首页</a>
          <a class="indexA" href="传奇3免费版官方网站/index.html">传奇3免费版官方网站</a>
+         <a class="indexA" href="世纪佳缘/index.html">世纪佳缘</a>
+         <a class="indexA" href="迅雷会员 因快而乐/index.html">迅雷会员 因快而乐</a>
+         <a class="indexA" href="37wan/index.html">37wan</a>
+         <a class="indexA" href="微信，是一种生活方式/index.html">微信，是一种生活方式</a>
          <a class="indexA" href="HTC智能手机/index.html">HTC智能手机</a>
     	</div>
     </body>
