--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
          <a class="indexA" href="37wan/index.html">37wan</a>
          <a class="indexA" href="微信，是一种生活方式/index.html">微信，是一种生活方式</a>
          <a class="indexA" href="HTC智能手机/index.html">HTC智能手机</a>
+         <a class="indexA" href="游戏列表/index.html">游戏列表</a>
     	</div>
     </body>
 </html>
