--- a/大众进口汽车/index.html
+++ b/大众进口汽车/index.html
@@ -14,30 +14,127 @@
       <div id="wapper">
          <div id="header"></div>
          <div id="content">
+          <div id="selector">
+            <div id="selectorcontent">
+              <div id="selectorcontentMain">
+                  <div id="maskinner">
+                    <ul>
+                       <li class="innerlifirst" id="first1">
+                          <a class="maskinnera" id="a1" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a2" href="#"></a>
+                       </li>
+                       <li class="innerlilast" >
+                          <a class="maskinnera" id="a3" href="#"></a>
+                       </li>
+                    </ul>
+                    <ul>
+                       <li class="innerlifirst" id="first2">
+                          <a class="maskinnera" id="a4" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a5" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a6" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a7" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a8" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a9" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a10" href="#"></a>
+                       </li>
+                       <li class="innerlilast" >
+                          <a class="maskinnera" id="a11" href="#"></a>
+                       </li>
+                    </ul>
+                    <ul>
+                       <li class="innerlifirst" id="first3">
+                          <a class="maskinnera" id="a12" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a13" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a14" href="#"></a>
+                       </li>
+                       <li class="innerlilast" >
+                          <a class="maskinnera" id="a15" href="#"></a>
+                       </li>
+                    </ul>
+                    <ul>
+                       <li class="innerlifirst" id="first4">
+                          <a class="maskinnera" id="a16" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a17" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a18" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a19" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a20" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a21" href="#"></a>
+                       </li>
+                       <li class="innerlilast" >
+                          <a class="maskinnera" id="a22" href="#"></a>
+                       </li>
+                    </ul>
+                    <ul>
+                       <li class="innerlifirst" id="first5">
+                          <a class="maskinnera" id="a23" href="#"></a>
+                       </li>
+                       <li class="maskinnerli" >
+                          <a class="maskinnera" id="a24" href="#"></a>
+                       </li>
+                       <li class="innerlilast" >
+                          <a class="maskinnera" id="a25" href="#"></a>
+                       </li>
+                    </ul>
+                       
+                  </div>
+              </div>
+            </div>
+            <div id="selectorbtn">
+               <a id="selectorbtna" openflag="no" ></a>
+            </div>
+          </div>
           <a id="yuyue" href="#"></a>
           <ul id="contentul">
               <li class="contentli" id="li1">
-                 <a class="contenta" id="a1" href="#">
+                 <a class="contenta" id="contenta1" href="#">
                      <img  src="css/images/5.jpg"/>
                  </a>
               </li>
               <li class="contentli" id="li2">
-                 <a class="contenta" id="a2" href="#">
+                 <a class="contenta" id="contenta2" href="#">
                      <img  src="css/images/6.jpg"/>
                  </a>
               </li>
               <li class="contentli" id="li3">
-                 <a class="contenta" id="a3" href="#">
+                 <a class="contenta" id="contenta3" href="#">
                      <img  src="css/images/7.jpg"/>
                  </a>
               </li>
               <li class="contentli" id="li4">
-                 <a class="contenta" id="a4" href="#">
+                 <a class="contenta" id="contenta4" href="#">
                      <img  src="css/images/8.jpg"/>
                  </a>
               </li>
               <li class="contentli" id="li5">
-                 <a class="contenta" id="a5" href="#">
+                 <a class="contenta" id="contenta5" href="#">
                      <img  src="css/images/9.jpg"/>
                  </a>
               </li>
