--- a/大众进口汽车/index.html
+++ b/大众进口汽车/index.html
@@ -12,7 +12,22 @@
     </head>
     <body>
       <div id="wapper">
-         <div id="header"></div>
+         <div id="header">
+            <a id="logo" href="#"></a>
+            <ul id="ul1"></ul>
+            <ul id="ul2">
+              <li class="ul2li">
+                 <a class="ul2a" id="ul2a1" href="#"></a>
+              </li>
+              <li class="ul2li">
+                 <a class="ul2a" id="ul2a2" href="#"></a>
+              </li>
+              <li class="ul2li">
+                 <a class="ul2a" id="ul2a3" href="#"></a>
+              </li>
+            </ul>
+            <ul id="ul3"></ul>
+         </div>
          <div id="content">
           <div id="selector">
             <div id="selectorcontent">
@@ -140,7 +155,13 @@
               </li>
           </ul>
          </div>
-         <div id="footer"></div>
+         <div id="footer">
+            <div id="footermain">
+                <div id="none"></div>
+                <div id="sectionlinks"></div>
+                <ul id="footerul"></ul>
+            </div>
+         </div>
       </div>
     </body>
 </html>
