--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          <a class="indexA" href="HTC智能手机/index.html">HTC智能手机</a>
          <a class="indexA" href="游戏列表/index.html">游戏列表</a>
          <a class="indexA" href="大众进口汽车/index.html">大众进口汽车</a>
+         <a class="indexA" href="放大镜/index.html">放大镜</a>
     	</div>
     </body>
 </html>
