--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
          <a class="indexA" href="游戏列表/index.html">游戏列表</a>
          <a class="indexA" href="大众进口汽车/index.html">大众进口汽车</a>
          <a class="indexA" href="放大镜/index.html">放大镜</a>
+         <a class="indexA" href="登陆页面/login.html">登陆页面</a>
+         <a class="indexA" href="好友页面/friends.html">好友页面</a>
+
     	</div>
     </body>
 </html>
