--- a/好友页面/friends.html
+++ b/好友页面/friends.html
@@ -27,7 +27,7 @@
                              <a class="itmnamea" href="#">我的名字</a>
                          </div>
                          <div class="itmtext">个性签名</div>
-                         <a class="itmquxiaogz" href="#">取消关注</a>
+                         <a class="itmquxiaogz">取消关注</a>
                       </div>
                       <div class="itmbottom"></div>
                   </div>
@@ -42,7 +42,7 @@
                              <a class="itmnamea" href="#">我的名字</a>
                          </div>
                          <div class="itmtext">个性签名</div>
-                         <a class="itmquxiaogz" href="#">取消关注</a>
+                         <a class="itmquxiaogz" >取消关注</a>
                       </div>
                       <div class="itmbottom"></div>
                   </div>
@@ -57,7 +57,7 @@
                              <a class="itmnamea" href="#">我的名字</a>
                          </div>
                          <div class="itmtext">个性签名</div>
-                         <a class="itmquxiaogz" href="#">取消关注</a>
+                         <a class="itmquxiaogz" >取消关注</a>
                       </div>
                       <div class="itmbottom"></div>
                   </div>
